# su2diffusion

./: .gitignore  README.md  SU(2)DiffusionHeatKernel.ipynb  SU2GateExperiments.ipynb  pyproject.toml
su2diffusion/: __init__.py  circuit.py  data.py  device.py  diagnostics.py  diffusion.py  experiment.py  forward_checks.py  hamiltonian.py  model.py  quaternion.py  sampling.py  synthesis.py  train.py  viz.py
tests/: test_circuit.py  test_data.py  test_diagnostics.py  test_diffusion.py  test_experiment.py  test_forward_checks.py  test_hamiltonian.py  test_model.py  test_quaternion.py  test_synthesis.py  test_viz.py
